[project]
name = "panel-mosaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7.1",
    "matplotlib>=3.9.2",
    "skunk>=1.3.0",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=8.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
