[project]
dependencies = ["cairosvg>=2.7.1", "matplotlib>=3.9.2", "skunk>=1.3.0"]
description = "Assemble smaller panels into a multi-panel figure using Matplotlib `subplot_mosaic` syntax"
name = "panel-mosaic"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
jupyter = ["ipython>=8.27.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
